Changes for mobile layout issue

--- a/app/assets/stylesheets/components/_filters.scss
+++ b/app/assets/stylesheets/components/_filters.scss
@@ -1,5 +1,5 @@
 .filter-form-initial, .filter-form-stuck {
-  width: 310px;
+  width: 306px;
 }
 
 .filter-form-initial {
