--- a/app/assets/stylesheets/pages/listings.sass
+++ b/app/assets/stylesheets/pages/listings.sass
@@ -34,7 +34,7 @@
 
 .listing-filters
   form
-    margin-left: -20px
+    margin-left: -7px
   border-color: $default-color
   .panel-body
     font-size: 12px
